src/test/ui/issues/issue-4XXXX/issue-40288.stderr
error[E0506]: cannot assign to `*refr` because it is borrowed
  --> $DIR/issue-40288.rs:16:5
   |
LL |     save_ref(&*refr, &mut out);
   |              ------ borrow of `*refr` occurs here
...
LL |     *refr = 3;
   |     ^^^^^^^^^ assignment to borrowed `*refr` occurs here
...
LL |     println!("{:?}", out[0]);
   |                      ------ borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
